--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,25 @@
+body {
+  text-align: center;
+  list-style: none;
+}
+
+
+
 #theFlashcard {
   border: 3px solid black;
   height: 300px;
   width: 300px;
+  position: absolute;
+  left: 34%;
+  list-style-type: none;
+}
+
+.bottom {
+  position: relative;
+  top: 225px;
+}
+
+.btns {
+  position: relative;
+  bottom: 10px;
 }
